# neuromodes

./: .gitignore  .readthedocs.yaml  README.md  README.rst  mode_orthonorm.ipynb  pyproject.toml
docs/: conf.py  modules.rst  tutorials.rst
docs/tutorials/: GEM.ipynb  calc_modes.ipynb  eigenstrapping.ipynb  eigenstrapping_sphere.ipynb  recon_maps.ipynb  test_eigenstrapping.ipynb  test_nulls.ipynb  wave_model.ipynb
docs/validation/: aniso_modes.ipynb  eigenstrapping_compare_speeds.ipynb  eigenstrapping_match_orig.ipynb  eigenstrapping_sphere.ipynb  nulls_eigenstrap_orig.ipynb
neuromodes/: __init__.py  basis.py  connectome.py  eigen.py  io.py  nulls.py  waves.py
neuromodes/data/: included_data.csv
nsbtools/: basis.py  connectome.py  eigen.py  io.py  models.py  plotting.py  utils.py  validation.py  waves.py
nsbtools/data/: included_data.csv  sp-human_tpl-fsLR_den-32k_hemi-L_medmask.label.gii  sp-human_tpl-fsLR_den-32k_hemi-R_medmask.label.gii  sp-human_tpl-fsLR_den-4k_hemi-R_medmask.label.gii  sp-macaque_tpl-fsLR_den-10k_hemi-L_medmask.label.gii  sp-macaque_tpl-fsLR_den-10k_hemi-L_midthickness.surf.gii  sp-marmoset_tpl-fsLR_den-10k_hemi-L_medmask.label.gii  sp-marmoset_tpl-fsLR_den-10k_hemi-L_midthickness.surf.gii  sp-marmoset_tpl-fsLR_den-38k_hemi-L_medmask.label.gii  sp-marmoset_tpl-fsLR_den-38k_hemi-L_midthickness.surf.gii
tests/: test_basis.py  test_connectome.py  test_eigen.py  test_io.py  test_nulls.py  test_nulls_seeding.py  test_nulls_speed.py  test_utils.py  test_validation.py  test_waves.py
