[project]
name = "nsbtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "brainspace>=0.1.20",
    "joblib>=1.4.2",
    "lapy>=1.1.0",
    "matplotlib>=3.7.5",
    "nibabel>=5.2.1",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "surfplot>=0.2.0",
]
