[project]
name = "nsbtools"
version = "0.1.0"
description = "Neuroimaging tools developed by the Neural Systems and Behaviour lab"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "brainspace>=0.1.20",
    "joblib>=1.4.2",
    "lapy>=1.1.0",
    "matplotlib>=3.7.5",
    "nibabel>=5.2.1",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "surfplot>=0.2.0",
    "trimesh>=4.8.1",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
]
tutorials = [
    "ipykernel>=6.31.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nsbtools"]

[tool.setuptools.package-data]
"nsbtools.data" = ["*"]

[tool.pytest.ini_options]
python_functions = ["test_"]
python_files = ["test_*.py",]
testpaths = ["tests",]
